--- a/plogin.html
+++ b/plogin.html
@@ -13,7 +13,7 @@
         <table width="500" border="1" bgcolor="#cccccc" align="center">
             <tr>
                 <th>帳號</th>
-                <td bgcolor="#FFFFFF"><input type="text" name="enterprise_id" /></td>
+                <td bgcolor="#FFFFFF"><input type="text" name="player_id" /></td>
             </tr>
             <tr>
                 <th>密碼</th>
