--- a/change_psw.html
+++ b/change_psw.html
@@ -7,10 +7,7 @@
 <body>
     <h3>更改密碼</h3>
 
-    <form action="change_check.php" method="post">
-        <div id="current-psw">
-            目前密碼<input type="text" name="old_psw" />
-        </div> 
+    <form action="change_psw.php" method="post">
         <div>
             新密碼<input type="text" name="new_psw" />
         
@@ -19,7 +16,7 @@
         </div>
     </form>
    
-    <form action="ehome.php"><input type="submit" value="返回"></form>
+    <form action="ehome.php"><input type="submit"  value="返回"></form>
    
 </body>
 </html>
