--- a/plogin.html
+++ b/plogin.html
@@ -23,8 +23,8 @@
 
         </table>
         <div align="center">
-            <form action="create.html"><input type="submit" value="註冊"></form>
-            <input type="submit" value="登入">
+            <input type="submit" name="register" value="註冊"></form>
+            <input type="submit" name="login" value="登入">
         </div>
 
     </form>
