--- a/plogin.html
+++ b/plogin.html
@@ -23,7 +23,7 @@
 
         </table>
         <div align="center">
-            <input type="submit" name="register" value="註冊"></form>
+            <input type="submit" name="register" value="註冊">
             <input type="submit" name="login" value="登入">
         </div>
 
