add return button

--- a/elogin.html
+++ b/elogin.html
@@ -1,33 +1,39 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>線上扭蛋機</title>
-		<meta http-equiv="Content-Type" content="text/css; charset=utf-8">
-    <link rel="stylesheet" href="style.css">
+	<meta http-equiv="Content-Type" content="text/css; charset=utf-8">
+	<link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-	
+
 	<h1 align="center">商家登入</h1>
-	<form action="elogin.php" method="post">	
-	  <table width="500" border="1" bgcolor="#cccccc" align="center">
-		<tr>
-		  <th>帳號</th>
-		  <td bgcolor="#FFFFFF"><input type="text" name="enterprise_id" /></td>
-		</tr>
-		<tr>
-		  <th>密碼</th>
-		  <td bgcolor="#FFFFFF"><input type="text" name="password"  /></td>
-		</tr>
-		
-	
-	  </table>
-      <div align="center">
-        <input type="submit" name="register" value="註冊">
-        <input type="submit" name="login" value="登入">
-      </div>
-       
+	<form action="elogin.php" method="post">
+		<table width="500" border="1" bgcolor="#cccccc" align="center">
+			<tr>
+				<th>帳號</th>
+				<td bgcolor="#FFFFFF"><input type="text" name="enterprise_id" /></td>
+			</tr>
+			<tr>
+				<th>密碼</th>
+				<td bgcolor="#FFFFFF"><input type="text" name="password" /></td>
+			</tr>
+
+
+		</table>
+		<div align="center">
+			<input type="submit" name="register" value="註冊">
+			<input type="submit" name="login" value="登入">
+		</div>
+
+		<div align="center">
+			<a href="home.html">返回</a>
+		</div>
+
 	</form>
-	
+
 </body>
-	
+
 </html>
