--- a/plogin.html
+++ b/plogin.html
@@ -28,6 +28,10 @@
             <input type="submit" name="login" value="登入">
         </div>
 
+        <div align="center">
+            <a href="home.html">返回</a>
+        </div>
+
     </form>
 
 </body>
